name:                glazier
version:             1.0.0.0
synopsis:            Framework for composing effects using ContT, State and variants.
description:         Framework for composing effects using ContT, State and variants.
homepage:            https://github.com/louispan/glazier#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            GUI
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Glazier.Command
                       Glazier.Command.Exec
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 0.2.0.0
                     , data-diverse >= 3.1
                     , data-diverse-lens >= 3.1.1
                     , dlist >= 0.8
                     , lens >= 4
                     , mtl >= 2 && <3
                     , stm >= 2.4
                     , tagged >= 0.8
                     , transformers >= 0.4 && < 0.6
                     , unliftio >= 0.2.7.0
                     , unliftio-core >= 0.1.1.0
  ghc-options:        -Wall
  default-language:    Haskell2010

test-suite glazier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , glazier
                     , data-diverse >= 3.1
                     , data-diverse-lens >= 3.1.1
                     , lens >= 4.14
                     , mtl >= 2.2
                     , dlist >= 0.8
                     , transformers >= 0.3
                     , unliftio >= 0.2.7.0
                     , unliftio-core >= 0.1.1.0
                     , stm >= 2.4
                     , tagged >= 0.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/glazier
