cabal-version:       2.2
name:                glazier
version:             2.0.0.0
synopsis:            Extensible effects using ContT, State and variants.
description:         Interpreting commmands with extensible effects using Cont/Concur monad, State, and variants.
homepage:            https://github.com/louispan/glazier#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            GUI
stability:           experimental
build-type:          Simple
tested-with:         GHC == 8.6.5


library
  hs-source-dirs:      src
  exposed-modules:     Glazier.Command
                       Glazier.Command.Exec
                       Glazier.Command.Internal
                       Glazier.Logger
                      --  Glazier.Logger.Exec
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 2.0
                     , data-diverse >= 4.6
                     , data-diverse-lens >= 4.3
                     , dlist >= 0.8
                     , lens >= 4.14
                     , mtl >= 2.2
                     , mmorph >= 1.0
                     , newtype-generics >= 0.5
                     , stm >= 2.5
                     , StateVar >= 1.1.1
                     , tagged >= 0.8
                     , text >= 1.2
                     , time >= 1.6
                     , transformers >= 0.3
                     , unliftio >= 0.2.10
                     , unliftio-core >= 0.1.2
                     , unordered-containers >= 0.2.8
  ghc-options:        -Wall -Wredundant-constraints
  default-language:    Haskell2010

test-suite glazier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 1.0
                     , data-diverse >= 4.6
                     , data-diverse-lens >= 4.3
                     , dlist >= 0.8
                     , glazier
                     , hspec >= 2
                     , lens >= 4.14
                     , mtl >= 2.2
                     , stm >= 2.4
                     , tagged >= 0.8
                     , transformers >= 0.3
                     , unliftio >= 0.2
                     , unliftio-core >= 0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/glazier
